fix big header alignment in safari browser

--- a/src/components/header/components/big-header/big-header.scss
+++ b/src/components/header/components/big-header/big-header.scss
@@ -24,6 +24,7 @@ header-component .big .navbar {
         margin: 0;
         padding-top: 2em;
         position: absolute;
+        top:0;
         right: 0;
         display: inline-block;
         color: #045f9c;
